--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.26.0",
     "cfb.js": "^4.3.2",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-charts": "^4.0.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
