Updated docker-compose.yaml for successful AWS deployment

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: '3.1'
 services:
   goal-line-gamblers-database:
-    build: ./database
+    # build: ./database
     image: stevenburkard/goal-line-gamblers-database:1.0
     ports:
-      - 3307:3306
+      - 3306:3306
     environment:
       - MYSQL_ROOT_PASSWORD=root
     restart: on-failure
@@ -12,7 +12,7 @@ services:
       - db-data:/var/lib/mysql
 
   goal-line-gamblers-backend:
-    build: ./backend
+    # build: ./backend
     image: stevenburkard/goal-line-gamblers-backend:1.0
     ports:
       - 8000:8000
@@ -23,7 +23,7 @@ services:
       sh -c "flask db upgrade && gunicorn -b 0.0.0.0 app:app"
 
   goal-line-gamblers-frontend:
-    build: ./frontend
+    # build: ./frontend
     image: stevenburkard/goal-line-gamblers-frontend:1.0
     ports:
       - 80:80
